<?xml version="1.0"?>
<package format="3">
  <name>lidar_step_tf_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge from LiDAR room scanner MQTT topics to LaserScan and PoseArray.</description>
  <maintainer email="local@example.invalid">Local User</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>